--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/express": "^4.17.21",
     "@types/node": "^20.12.7",
     "express": "^4.19.2",
+    "firebase": "^10.11.1",
     "fluent-ffmpeg": "^2.1.2"
   },
   "devDependencies": {
