--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@types/node": "^20.12.7",
     "express": "^4.19.2",
     "firebase": "^10.11.1",
+    "firebase-admin": "^12.1.0",
+    "firebase-functions": "^5.0.1",
     "fluent-ffmpeg": "^2.1.2"
   },
   "devDependencies": {
