--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,10 +2,10 @@
     "compilerOptions": {
       "target": "es6",
       "module": "commonjs",
-      "rootDir": "src",
+      "rootDir": "video-processing-service/src",
       "outDir": "dist",
       "strict": true,
       "esModuleInterop": true},
-    "include": ["src/**/*.ts"],
+    "include": ["video-processing-service/src/**/*.ts"],
     "exclude": ["node_modules"]
   }
